--- a/main.html
+++ b/main.html
@@ -8,6 +8,19 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<ul class="dog-list">
+    <li>
+        <a href="https://en.wikipedia.org/wiki/Golden_Retriever">
+            <img src="golden_retriever_img_link" alt="Golden Retriever">
+        </a>
+    </li>
+    <li>
+        <a href="https://en.wikipedia.org/wiki/Poodle">
+            <img src="poodle_img_link" alt="Poodle">
+        </a>
+    </li>
+    <!-- Add more list items for additional dog breeds -->
+</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
